aligned the navbar and fixed alignment of contacts page

--- a/style.css
+++ b/style.css
@@ -40,8 +40,6 @@ p,li {
     float: left;
     width: 31.8%;
     margin: 3px;
-    min-width: 170px;
-    max-width: 270px;
 }
 /* Clear floats after the columns */
 .row:after {
@@ -53,7 +51,6 @@ clear: both;
     background-color: #66A8E3;
     border-radius: 10px;
     padding: 2px;
-    position:static
 }
 
 .navbar {
@@ -63,8 +60,6 @@ clear: both;
     overflow: hidden;
     background-color: #2155A9;
     border-radius: 10px;
-    min-width: 280px;
-    max-width: 500px;
 }
 .link a {
     display: block;
@@ -79,7 +74,6 @@ clear: both;
 
 .link a:hover {
     background-color: #EDEFF5;
-    color:#10256D;
 }
 .navti {
     color: #66A8E3;
@@ -96,8 +90,8 @@ input:focus {
     height: 100px;
 }
 .gif {
-    width: 210px;
-    height: 300px;
+    width: 200px;
+    height: 270px;
     float:left;
     border-radius: 10px;
 }
@@ -108,4 +102,13 @@ input:focus {
 #submit:hover {
     background-color: #EDEFF5;
     color:#10256D;
+}
+.flex-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.form {
+    margin: 10px;
 }
